--- a/HelloWorld/res/layout/listview_item_row.xml
+++ b/HelloWorld/res/layout/listview_item_row.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="10dp" >
+    android:layout_height="match_parent">
 
-    <ImageView android:id="@+id/imgIcon"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" 
-        android:layout_weight=".2"/>
+     <ImageView
+         android:id="@+id/country_icon"
+         android:layout_width="50dp"
+         android:layout_height="50dp"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentTop="true"
+         android:layout_margin="5dp"
+         android:src="@drawable/norway_flag_icon" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight=".8" >
+     <TextView
+         android:id="@+id/country_title"
+         android:layout_width="200dp"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="10dp"
+         android:layout_marginLeft="10dp"
+         android:layout_alignParentRight="true"
+         android:layout_alignParentTop="true"
+         android:layout_toRightOf="@+id/country_icon"
+         android:gravity="center_vertical"
+         android:textColor="#000000"
+         android:textSize="18sp"
+         android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="10dp"
-            android:gravity="center_vertical"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+     <TextView
+         android:id="@+id/country_detail"
+         android:layout_width="200dp"
+         android:layout_height="wrap_content"
+         android:layout_alignLeft="@+id/country_title"
+         android:layout_alignParentRight="true"
+         android:layout_below="@+id/country_title"
+         android:gravity="center_vertical"
+         android:textColor="#000000"
+         android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/txtDetail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:textColor="#000000"
-            android:textSize="12sp"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
